--- a/presentation.tex
+++ b/presentation.tex
@@ -1,5 +1,6 @@
 \documentclass[xcolor=table]{beamer}
 \usepackage[utf8]{inputenc}
+\usepackage{listings}
 
 \usepackage[
     backend=biber,
@@ -297,13 +298,45 @@
     \end{columns}  
 \end{frame}
 
+\begin{frame}[fragile]
+\frametitle{Observasjon: Server log}
+  \subsection{Observasjon}
+      \begin{lstlisting}[basicstyle=\tiny]
+        [10/10/16 - 10:59:17] [ ALARM ] Sensor 1 triggered LS filter!
+        [10/10/16 - 11:04:35] [ ALARM ] Sensor 1 cleared LS filter!
+        [10/10/16 - 11:08:27] [ ALARM ] Sensor 2 triggered LS filter!
+        [10/10/16 - 11:13:43] [ ALARM ] Sensor 2 cleared LS filter!
+        [10/10/16 - 11:22:03] [ ALARM ] Sensor 1 triggered LS filter!
+        [10/10/16 - 11:29:21] [ ALARM ] Sensor 1 cleared LS filter!
+        [10/10/16 - 11:27:31] [ ALARM ] Sensor 2 triggered LS filter!
+        [10/10/16 - 11:34:16] [ ALARM ] Sensor 2 cleared LS filter!
+        [10/10/16 - 11:34:17] [ ALARM ] Sensor 2 triggered LS filter!
+        [10/10/16 - 11:34:20] [ ALARM ] Sensor 2 cleared LS filter!
+      \end{lstlisting} 
+\end{frame}
+
 \begin{frame}
 \frametitle{Observasjon: Målesystem}
       \begin{figure}
         \includegraphics[scale=0.70]{thesis/graphics/cns91-and-csac-telemetry-frequency-1.png}
+        \caption{Måleserie gjort under test lokasjonsfilter test}
+      \end{figure}
+\end{frame}
+
+\section{Klokkemodell test}
+\begin{frame}
+\frametitle{Oppsett}
+  \begin{itemize}
+    \item Samme som før, men tester nå også klokkemodellen og styring.
+  \end{itemize}
+  \subsection{Beskrivelse}
+      \begin{figure}
+        \includegraphics[scale=0.25]{thesis/graphics/server_layout.eps}
         \caption{Oppsett av server og klienter under test}
       \end{figure}
 \end{frame}
+
+
 
 \section{Konklusjon}
 \begin{frame}
