--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -201,6 +201,6 @@ The goal of this project was to create a prototype of a smart atomic clock contr
 %===================================================
 
 \newpage
-\printbibliography[title={Complete Bibliography},heading=bibintoc]
+\printbibliography[title={Bibliography},heading=bibintoc]
 
 \end{document}                    
